--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is my first react app.",
-  "main": "App.js",
+  "main": "FoodDelivery.js",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html",
@@ -31,6 +31,7 @@
   ],
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1"
   }
 }
